syntax = "proto3";
package wallet;

import "google/protobuf/descriptor.proto";

extend google.protobuf.EnumValueOptions {
    optional string string_name = 123456789;
  }

service Keys {
    rpc List(AccountType) returns (AccountListResponse);
    rpc Add(AddAccount) returns (WalletResponse);
}

enum Blockchain {
    UNSPECIFIED = 0;
    XRPL = 1 [
        (string_name) = "XRPL"
    ];
    EVM = 2 [
        (string_name) = "EVM"
    ];
}

message AccountType {
    Blockchain blockchain = 1;
    string user_id = 2;
}

message AddAccount {
    Blockchain blockchain = 1;
    string alias = 2;
    string user_id = 3;
}

message AccountListResponse {
    repeated WalletResponse wallets = 1;
    Blockchain blockchain = 2;
}

message WalletResponse {
    string alias = 1;
    string public_key = 2;
    optional string classic_address = 3;
}